--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.wenyu7980</groupId>
     <artifactId>jpaQuery</artifactId>
-    <version>2.0.0-snapshot</version>
+    <version>2.0.0</version>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.hibernate.javax.persistence/hibernate-jpa-2.1-api -->
         <dependency>
